---
source: crates/vicuna-compiler/src/parser.rs
expression: "type_declaration().parse(\"enum Foo { A, B, C }\")"
---
Ok:
  Enum:
    name:
      - Foo
      - start: 4
        end: 9
    type_parameters: ~
    variants:
      - - - A
          - start: 11
            end: 12
        - Empty
      - - - B
          - start: 14
            end: 15
        - Empty
      - - - C
          - start: 17
            end: 19
        - Empty

